# interface99

./: .clang-format  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  interface99.h
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  airplane.c  default_impl.c  marker.c  media_stream.c  read_write.c  read_write_both.c  shape.c  state.c  trace_state.c  tracing_vehicle.c
examples/opaque_type/: CMakeLists.txt  croak.h  frog.c  frog.h  main.c
scripts/: check-fmt.sh  fmt.sh  test-examples.sh  test.sh
tests/: CMakeLists.txt  basic_tests.c  common.c  common.h  decl_impl.c  default_impl.c  forward_typedefs.c  impl_primary.c  metalang99_compliant.c  static_impl.c  superinterfaces.c  tests.c  util.h  vcalls.c  version.c
tests/extern_impl/: CMakeLists.txt  impl.c  test.c  types.h
